--- a/loginweb/src/main/webapp/lg_page.html
+++ b/loginweb/src/main/webapp/lg_page.html
@@ -13,7 +13,7 @@
 <li> Low price
 </ul> 
 <b><h2>Please authorize for more information:</h2></b> <p>
-<input type="submit" value="Sign in"><p>
+<a href="m_page.html"><input type="submit" value="Sign in"></a><p>
 <input type="submit" value="Sign up"></p>
 </body>
 </html>
