--- a/loginweb/src/main/webapp/m_page.html
+++ b/loginweb/src/main/webapp/m_page.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body style="background-color:powderblue;">
+<a href="rooms.html">Booking</a> <p>
 <center><h1> Welcome to our Hotel!!! </h1></center>
 
 <center>Username :<input type="text" name="username"></center><p>
@@ -13,7 +14,7 @@
 
 <center><h2>No account?<br>You can sign up right now!!!</h2></center>
 
-<center><input type="submit" value="Sign up"> </center>
+<a href="lg_page.html"><center><input type="submit" value="Sign up"> </center></a>
 
 </body>
 </html>
